# convoy

./: .commitlintrc.json  .env.example  .gitignore  .releaserc.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  compose.yaml  package-lock.json  package.json
api/: .dockerignore  Dockerfile  main.py  pyproject.toml
api/migrations/versions/: 2026_02_04_1802-3a761eaa49ff_create_cargo_request_and_batch.py
api/src/: models.py  routes.py
api/src/batch_processor/: __init__.py  exceptions.py
api/src/cargo_loader/: __init__.py
api/src/cargo_tracker/: service.py
api/src/database/: models.py
api/src/temporal/: __init__.py  config.py  worker.py
core/: Dockerfile  Dockerfile.api  Dockerfile.worker  alembic.ini  main.py  pyproject.toml
core/migrations/: README  env.py
core/migrations/versions/: 2026_03_08_1545-4b8c2d3e5f6a_add_project_authentication.py
core/src/api/: __init__.py  main.py  management_routes.py  models.py  routes.py
core/src/auth/: __init__.py  admin.py  dependencies.py  key_generator.py
core/src/batch_processor/: models.py  service.py
core/src/cargo_loader/: __init__.py  exceptions.py  models.py  service.py
core/src/cargo_tracker/: __init__.py  exceptions.py  models.py  service.py
core/src/database/: __init__.py  base.py  models.py
core/src/models/: __init__.py  (+3 more)
tests/: Dockerfile  Dockerfile.callback  README.md  __init__.py  conftest.py  mock_callback_server.py  pyproject.toml  test_auth.py  test_batch_flow.py  test_batch_flow_production.py  test_cargo_load.py  test_cargo_tracking.py  test_health.py
(+127 files in other folders)
