[project]
name = "convoy-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=13.0.0",
    "anthropic>=0.77.1",
    "boto3>=1.42.41",
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
]
